--- a/Frontend/minecraft-portfolio/src/styles/Header.css
+++ b/Frontend/minecraft-portfolio/src/styles/Header.css
@@ -1,15 +1,3 @@
-.header {
-    background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0));
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-}
 
 .header-title {
     color: white;
@@ -49,4 +37,27 @@
 
 .header-nav ul li a svg:hover {
     color: gray;
+}
+.header {
+    background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0));
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.header.hidden {
+    transform: translateY(-80%);
+    opacity: 0;
+}
+
+.header.visible {
+    transform: translateY(0);
+    opacity: 1;
 }
