--- a/Frontend/minecraft-portfolio/src/styles/Home.css
+++ b/Frontend/minecraft-portfolio/src/styles/Home.css
@@ -65,3 +65,29 @@ button:hover {
 body {
     background-color: rgb(27, 25, 44);
 }
+.fade-in {
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInAnimation 0.8s ease-out forwards;
+}
+.home-container {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+}
+
+.home-container.fade-in {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+@keyframes fadeInAnimation {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
